--- a/src/main/resources/menu.fxml
+++ b/src/main/resources/menu.fxml
@@ -32,6 +32,11 @@
                   <Insets bottom="10.0" />
                </VBox.margin>
             </Button>
+            <Button mnemonicParsing="false" onAction="#startTutorial" prefHeight="33.0" prefWidth="96.0" text="Tutorial">
+               <VBox.margin>
+                  <Insets bottom="10.0" />
+               </VBox.margin>
+            </Button>
             <Button mnemonicParsing="false" onAction="#exitGame" prefHeight="33.0" prefWidth="96.0" text="Exit" />
          </children>
       </VBox>
