--- a/src/main/resources/menu.fxml
+++ b/src/main/resources/menu.fxml
@@ -20,12 +20,12 @@
             <Image url="@com/example/demo/images/background1.jpg" />
          </image>
       </ImageView>
-      <Label layoutX="550.0" layoutY="275.0" text="Sky Battles" textAlignment="CENTER">
+      <Label alignment="CENTER" layoutX="545.0" layoutY="275.0" text="Sky Battle">
          <font>
             <Font size="50.0" />
          </font>
       </Label>
-      <VBox alignment="CENTER" layoutX="620.0" layoutY="365.0" prefHeight="118.0" prefWidth="100.0">
+      <VBox alignment="CENTER" layoutX="602.0" layoutY="365.0" prefHeight="118.0" prefWidth="100.0">
          <children>
             <Button mnemonicParsing="false" onAction="#startGame" prefHeight="33.0" prefWidth="96.0" text="Play">
                <VBox.margin>
