--- a/src/main/resources/menu.fxml
+++ b/src/main/resources/menu.fxml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.image.Image?>
@@ -25,18 +24,10 @@
             <Font size="50.0" />
          </font>
       </Label>
-      <VBox alignment="CENTER" layoutX="602.0" layoutY="365.0" prefHeight="118.0" prefWidth="100.0">
+      <VBox alignment="CENTER" layoutX="602.0" layoutY="365.0" prefHeight="118.0" prefWidth="100.0" spacing="10">
          <children>
-            <Button mnemonicParsing="false" onAction="#startGame" prefHeight="33.0" prefWidth="96.0" text="Play">
-               <VBox.margin>
-                  <Insets bottom="10.0" />
-               </VBox.margin>
-            </Button>
-            <Button mnemonicParsing="false" onAction="#startTutorial" prefHeight="33.0" prefWidth="96.0" text="Tutorial">
-               <VBox.margin>
-                  <Insets bottom="10.0" />
-               </VBox.margin>
-            </Button>
+            <Button mnemonicParsing="false" onAction="#startGame" prefHeight="33.0" prefWidth="96.0" text="Play"/>
+            <Button mnemonicParsing="false" onAction="#startTutorial" prefHeight="33.0" prefWidth="96.0" text="Tutorial"/>
             <Button mnemonicParsing="false" onAction="#exitGame" prefHeight="33.0" prefWidth="96.0" text="Exit" />
          </children>
       </VBox>
